--- a/portfolio.html
+++ b/portfolio.html
@@ -94,16 +94,15 @@
       </div>
     </section>
   </div>
-
+</body>
   <footer class="fixed-bottom"></footer>
         <nav>
           <ul style="list-style: none;">
-            <li style="background-color: #49aaa5;" style="list-style: none;">test</li>
-            <li id="copyRight" style="text-align: center;" style="list-style: none;" >Copyright Ryan Sims 2019</li>
+            <li id="copyRight" style="text-align: center;" style="list-style: none;" style="background-color: white;">Copyright Ryan Sims 2019</li>
           </ul>
           </nav>
         </nav>
       </footer>
-</body>
+
 
 </html>
