--- a/contact.html
+++ b/contact.html
@@ -58,9 +58,8 @@
 
   <footer class="fixed-bottom"></footer>
         <nav>
-          <ul style="list-style: none;">
-            <li style="background-color: #49aaa5;" style="list-style: none;">test</li>
-            <li id="copyRight" style="text-align: center;" style="list-style: none;" >Copyright Ryan Sims 2019</li>
+          <ul style="list-style: none;" style="text-align: center;">
+            <li id="copyRight" style="text-align: center;" style="list-style: none;" >Ryan Sims 2019</li>
           </ul>
           </nav>
         </nav>
