--- a/contact.html
+++ b/contact.html
@@ -39,17 +39,17 @@
         <div class="form-group">
           <label for="exampleInputName">Name</label>
           <input type="email" class="form-control" id="exampleInputName" aria-describedby="nameHelp"
-            placeholder="Enter Name">
+            placeholder="What is your Name?">
         </div>
         <div class="form-group">
           <label for="exampleInputEmail1">Email</label>
-          <input type="email" class="form-control" id="exampleInputEmail" placeholder="Email">
+          <input type="email" class="form-control" id="exampleInputEmail" placeholder="What is your Email?">
         </div>
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Message</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Type your message"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Mail Raven</button>
       </form>
 
     </section>
