Changed picture captions

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
               <img src="assets/images/technics-q-c-640-480-1.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Word Guess</h3>
+            <h3>Outdated Tech</h3>
           </div>
         </div>
 
@@ -50,7 +50,7 @@
               <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>RPG Game</h3>
+            <h3>Scratching Records</h3>
           </div>
 
         </div>
@@ -64,7 +64,7 @@
               <img src="assets/images/technics-q-c-640-480-5.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Trivia Game</h3>
+            <h3>Broke Boy Airpods</h3>
           </div>
         </div>
 
@@ -74,7 +74,7 @@
               <img src="assets/images/technics-q-c-640-480-7.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Rutgers Info Widget</h3>
+            <h3>Where is your dongle?</h3>
           </div>
 
         </div>
@@ -88,7 +88,7 @@
               <img src="assets/images/technics-q-c-640-480-9.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Rock Paper Scissors</h3>
+            <h3>Cool Tech You Cant Buy #CES2019</h3>
           </div>
         </div>
       </div>
