Added profile picture

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   
           <div class="row">
             <div class="col-md-3" id="aboutimg">
-              <img src="http://placehold.it/200x200" alt="Placeholder image" class="img-thumbnail">
+              <img src="https://media.licdn.com/dms/image/C4E03AQGdrULPBLrYaw/profile-displayphoto-shrink_200_200/0?e=1565827200&v=beta&t=yWdFNdgQ3L9NYxZbb5oufuQ6YCTKiV7p0Txsnv-L33M" alt="Placeholder image" class="img-thumbnail">
             </div>
             <div class="col-md-9">
               <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, error reprehenderit. Ab, enim laudantium sunt aspernatur eum qui sint cupiditate molestias fugiat repellendus, ad possimus quibusdam similique amet dolores cumque? </p>
