Changed footer color

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body background="assets/images/concrete_seamless.png">
 
-  <header id="masthead" style="background-color: white;">
-      <nav class="navbar navbar-light bg-light">
+  <header id="masthead" style="background-color: orange;">
+      <nav class="navbar navbar-dark bg-dark">
           <a class="navbar-brand" href="index.html">Ryan Sims</a>
           <ul class="nav justify-content-end">
             <li class="nav-item">
@@ -46,7 +46,7 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati minima inventore impedit doloremque explicabo error veritatis, velit quo sapiente tempore cupiditate repellendus iure voluptas, quisquam doloribus, alias molestias! Non, nihil!</p>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, maiores ab at provident suscipit modi quidem ratione explicabo autem debitis voluptatibus harum id similique earum nisi, repellendus, ipsum maxime tempora.</p>
             </section>
-    <footer class="fixed-bottom">
+    <footer class="fixed-bottom" style="background-color: orange;">
         <nav>
           <ul style="list-style: none;">
             <li id="copyRight" style="text-align: center;" style="list-style: none;" style="background-color: #6666;">Copyright Ryan Sims 2019</li>
