--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body background="assets/images/concrete_seamless.png">
 
     <header id="masthead" style="background-color: white;">
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html">Ryan Sims</a>
             <ul class="nav justify-content-end">
               <li class="nav-item">
@@ -95,7 +95,7 @@
     </section>
   </div>
 </body>
-  <footer class="fixed-bottom"></footer>
+  <footer class="fixed-bottom" style="background-color: orange;">
         <nav>
           <ul style="list-style: none;">
             <li id="copyRight" style="text-align: center;" style="list-style: none;" style="background-color: white;">Copyright Ryan Sims 2019</li>
