Fixed About Me paragraph padding, final touches, done

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="col-md-9">
               <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, error reprehenderit. Ab, enim laudantium sunt aspernatur eum qui sint cupiditate molestias fugiat repellendus, ad possimus quibusdam similique amet dolores cumque? </p>
               </div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati minima inventore impedit doloremque explicabo error veritatis, velit quo sapiente tempore cupiditate repellendus iure voluptas, quisquam doloribus, alias molestias! Non, nihil!</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, maiores ab at provident suscipit modi quidem ratione explicabo autem debitis voluptatibus harum id similique earum nisi, repellendus, ipsum maxime tempora.</p>
+              <p style="padding-left: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati minima inventore impedit doloremque explicabo error veritatis, velit quo sapiente tempore cupiditate repellendus iure voluptas, quisquam doloribus, alias molestias! Non, nihil!</p>
+              <p style="padding-left: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, maiores ab at provident suscipit modi quidem ratione explicabo autem debitis voluptatibus harum id similique earum nisi, repellendus, ipsum maxime tempora.</p>
             </section>
     <footer class="fixed-bottom" style="background-color: orange;">
         <nav>
