--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,10 @@
               <img src="assets/images/technics-q-c-640-480-1.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Outdated Tech</h3>
+            <h3>Trivia Game</h3>
+            <form action="https://ryansims265.github.io/TriviaGame/">
+              <input type="submit" value="Click here to play!" />
+          </form>
           </div>
         </div>
 
