Added Giphy API

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,10 @@
               <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Scratching Records</h3>
+            <h3>Giphy API</h3>
+            <form action="https://ryansims265.github.io/giphyAPI/">
+              <input type="submit" value="Click here to check it out!" />
+          </form>
           </div>
 
         </div>
