Changed labels on projects page and changed the about me page with actual information

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
           <label for="exampleFormControlTextarea1">Message</label>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Type your message"></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Mail Raven</button>
+        <button type="submit" class="btn btn-primary">Send Raven</button>
       </form>
 
     </section>
