--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
               <img src="https://media.licdn.com/dms/image/C4E03AQGdrULPBLrYaw/profile-displayphoto-shrink_200_200/0?e=1565827200&v=beta&t=yWdFNdgQ3L9NYxZbb5oufuQ6YCTKiV7p0Txsnv-L33M" alt="Placeholder image" class="img-thumbnail">
             </div>
             <div class="col-md-9">
-              <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, error reprehenderit. Ab, enim laudantium sunt aspernatur eum qui sint cupiditate molestias fugiat repellendus, ad possimus quibusdam similique amet dolores cumque? </p>
+              <p> I am a full-time student and a full-time employee of an Atlanta area tech startup called SnapNurse. I am currently looking for side projects to work on in the business and development space. I enjoy movies, hiking, and learning new things! I also have two cats: one haired and one hairless. </p>
               </div>
-              <p style="padding-left: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati minima inventore impedit doloremque explicabo error veritatis, velit quo sapiente tempore cupiditate repellendus iure voluptas, quisquam doloribus, alias molestias! Non, nihil!</p>
-              <p style="padding-left: 20px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, maiores ab at provident suscipit modi quidem ratione explicabo autem debitis voluptatibus harum id similique earum nisi, repellendus, ipsum maxime tempora.</p>
+              <p style="padding-left: 20px;">I have lots of experience in business operations and business devlopment space with a concetration in creating processes for new technology and using third party systems to get to market during intial devlopment.</p>
+              <p style="padding-left: 20px;">I also have expereince in the web devlopment space with HTML, CSS, JavaScript, JQuery, Node.JS and Bootstrap. I will be completing the GA Tech Coding Bootcamp in November. </p>
             </section>
     <footer class="fixed-bottom" style="background-color: orange;">
         <nav>
