--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
                         <a class=" nav-link" href="index.html">About Me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portfolio.html">Portfolio</a>
+                <a class="nav-link" href="portfolio.html"> Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -29,7 +29,7 @@
 
 <div class="container" id="main-container" style="background-color: white;">
   <section class="main-section">
-      <h1>Portfolio</h1>
+      <h1>My Projects</h1>
 
 
       <div class="row">
@@ -40,7 +40,7 @@
               <img src="assets/images/technics-q-c-640-480-1.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Trivia Game</h3>
+            <h3>Indiana Jones Trivia Game</h3>
             <form action="https://ryansims265.github.io/TriviaGame/">
               <input type="submit" value="Click here to play!" />
           </form>
@@ -53,7 +53,7 @@
               <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Giphy API</h3>
+            <h3>Old Movie Giphy API</h3>
             <form action="https://ryansims265.github.io/giphyAPI/">
               <input type="submit" value="Click here to check it out!" />
           </form>
@@ -84,7 +84,7 @@
               <img src="assets/images/technics-q-c-640-480-7.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Where is your dongle?</h3>
+            <h3>Crystal Guess Game</h3>
           </div>
 
         </div>
@@ -98,7 +98,7 @@
               <img src="assets/images/technics-q-c-640-480-9.jpg" alt="RPG Game" style="width: 300px;"></div>
           </div>
           <div class="col-6">
-            <h3>Cool Tech You Cant Buy #CES2019</h3>
+            <h3>CarMed</h3>
           </div>
         </div>
       </div>
