Changed the pictures of the games and added buttons on about me page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body background="assets/images/concrete_seamless.png">
+<body background="assets/images/background.png">
 
   <header id="masthead" style="background-color: orange;">
       <nav class="navbar navbar-dark bg-dark">
@@ -45,8 +45,24 @@
               </div>
               <p style="padding-left: 20px;">I have lots of experience in business operations and business devlopment space with a concetration in creating processes for new technology and using third party systems to get to market during intial devlopment.</p>
               <p style="padding-left: 20px;">I also have expereince in the web devlopment space with HTML, CSS, JavaScript, JQuery, Node.JS and Bootstrap. I will be completing the GA Tech Coding Bootcamp in November. </p>
+
+              <h4 style="padding-left: 20px;"> Connect with me on LinkedIn: </h4>
+              <a href="https://www.linkedin.com/in/ryan-sims265/"><button type="button" class="btn btn-primary btn-lg btn-block" href="http://google.com">LinkedIn</button></a>
+              <br>
+              <br>
+              <br>
+              <h4 style="padding-left: 20px;"> Check out my Github Profile: </h4>
+              <a href="https://github.com/ryansims265" target="_parent"><button type="button" class="btn btn-dark btn-lg btn-block">GitHub</button></a>
+              <br>
+              <br>
+              <br>
+              <h4 style="padding-left: 20px;"> Check out my Resume: </h4>
+              <a href="https://docs.google.com/document/d/1piKwM3ArzlLJrUHr92c445G2VzqyrgZZxwBh6ifklKI/edit?usp=sharing"><button type="button" class="btn btn-success btn-lg btn-block">Resume</button></a>
+              <br>
+
+
             </section>
-    <footer class="fixed-bottom" style="background-color: orange;">
+     <footer class="fixed-bottom" style="background-color: orange;">
         <nav>
           <ul style="list-style: none;">
             <li id="copyRight" style="text-align: center;" style="list-style: none;" style="background-color: #6666;">Copyright Ryan Sims 2019</li>
