--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body background="assets/images/concrete_seamless.png">
+<body background="assets/images/background.png">
 
     <header id="masthead" style="background-color: white;">
         <nav class="navbar navbar-dark bg-dark">
@@ -29,7 +29,11 @@
 
 <div class="container" id="main-container" style="background-color: white;">
   <section class="main-section">
-      <h1>My Projects</h1>
+    <br>
+      <h1>Feel free to check out my latest projects:</h1>
+
+      <br>
+      <br>
 
 
       <div class="row">
@@ -37,7 +41,7 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/technics-q-c-640-480-1.jpg" alt="RPG Game" style="width: 300px;"></div>
+              <img src="assets/images/jones.jpg" alt="Indiana" style="width: 300px; height: 150px" ></div>
           </div>
           <div class="col-6">
             <h3>Indiana Jones Trivia Game</h3>
@@ -50,7 +54,7 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game" style="width: 300px;"></div>
+              <img src="assets/images/old.jpg" alt="Movie API" style="width: 300px; height: 150px" "></div>
           </div>
           <div class="col-6">
             <h3>Old Movie Giphy API</h3>
@@ -58,7 +62,7 @@
               <input type="submit" value="Click here to check it out!" />
           </form>
           </div>
-
+<br>
         </div>
       </div>
 
@@ -67,7 +71,7 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/tron.jpg" alt="RPG Game" style="width: 300px;"></div>
+              <img src="assets/images/tron.jpg" alt="Tron" style="width: 300px; height: 150px"></div>
           </div>
           <div class="col-6">
             <h3>Tron Lightrail Scheduler</h3>
@@ -81,29 +85,36 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/technics-q-c-640-480-7.jpg" alt="RPG Game" style="width: 300px;"></div>
+              <img src="assets/images/crystal.gif" alt="Crystal Game" style="width: 300px; height: 150px" ></div>
           </div>
           <div class="col-6">
             <h3>Crystal Guess Game</h3>
           </div>
-
+          <form action="https://ryansims265.github.io/Crystal-Game/">
+            <input type="submit" value="Click here to play!" />
+        </form>
         </div>
       </div>
-
+<br>
       <div class="row">
 
-        <div class="col-sm-6">
+        <div class="col-sm-6" id="carmed">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/technics-q-c-640-480-9.jpg" alt="RPG Game" style="width: 300px;"></div>
+              <img src="assets/images/carmed.png" alt="CarMed" style="width: 300px; height: 150px" ></div>
           </div>
           <div class="col-6">
             <h3>CarMed</h3>
           </div>
+          <form action="https://ryansims265.github.io/project1/">
+            <input type="submit" value="Click here to check it out!" />
+        </form>
+        <br>
         </div>
       </div>
     </section>
   </div>
+  <br>
 </body>
   <footer class="fixed-bottom" style="background-color: orange;">
         <nav>
