--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body background="assets/images/concrete_seamless.png">
+<body background="assets/images/background.png">
 
     <header id="masthead" style="background-color: white;">
         <nav class="navbar navbar-dark bg-dark">
@@ -45,6 +45,11 @@
           <label for="exampleInputEmail1">Email</label>
           <input type="email" class="form-control" id="exampleInputEmail" placeholder="What is your Email?">
         </div>
+
+        <div class="form-group">
+            <label for="exampleInputEmail1">Company</label>
+            <input type="email" class="form-control" id="exampleInputEmail" placeholder="What company do you work?">
+          </div> 
         <div class="form-group">
           <label for="exampleFormControlTextarea1">Message</label>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Type your message"></textarea>
