--- a/portfolio.html
+++ b/portfolio.html
@@ -54,11 +54,11 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/old.jpg" alt="Movie API" style="width: 300px; height: 150px" "></div>
+              <img src="assets/images/bot.jpg" alt="Liri Bot" style="width: 300px; height: 150px" "></div>
           </div>
           <div class="col-6">
-            <h3>Old Movie Giphy API</h3>
-            <form action="https://ryansims265.github.io/giphyAPI/">
+            <h3>Liri Bot</h3>
+            <form action="https://github.com/ryansims265/liri-node-app">
               <input type="submit" value="Click here to check it out!" />
           </form>
           </div>
@@ -112,9 +112,12 @@
         <br>
         </div>
       </div>
+      
     </section>
   </div>
   <br>
+
+  
 </body>
   <footer class="fixed-bottom" style="background-color: orange;">
         <nav>
