--- a/portfolio.html
+++ b/portfolio.html
@@ -54,11 +54,11 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/bot.jpg" alt="Liri Bot" style="width: 300px; height: 150px" "></div>
+              <img src="assets/images/boys.jpg" alt="The Boys Test" style="width: 300px; height: 150px" "></div>
           </div>
           <div class="col-6">
-            <h3>Liri Bot</h3>
-            <form action="https://github.com/ryansims265/liri-node-app">
+            <h3>The Boys Friend Finder Quiz</h3>
+            <form action="https://theboystest.herokuapp.com/">
               <input type="submit" value="Click here to check it out!" />
           </form>
           </div>
