Updated portfolio with project 2 and upadted buttons and code links

--- a/index.html
+++ b/index.html
@@ -38,28 +38,22 @@
   
           <div class="row">
             <div class="col-md-3" id="aboutimg">
-              <img src="https://media.licdn.com/dms/image/C4E03AQGdrULPBLrYaw/profile-displayphoto-shrink_200_200/0?e=1565827200&v=beta&t=yWdFNdgQ3L9NYxZbb5oufuQ6YCTKiV7p0Txsnv-L33M" alt="Placeholder image" class="img-thumbnail">
+              <img src="https://media.licdn.com/dms/image/C4E03AQGdrULPBLrYaw/profile-displayphoto-shrink_200_200/0?e=1574899200&v=beta&t=eJf-_9uZl-kCjJ_UQpRY7WRs7B7gJKphtDuTjYTQk6I" alt="Placeholder image" class="img-thumbnail">
             </div>
             <div class="col-md-9">
               <p> I am a full-time student and a full-time employee of an Atlanta area tech startup called SnapNurse. I am currently looking for side projects to work on in the business and development space. I enjoy movies, hiking, and learning new things! I also have two cats: one haired and one hairless. </p>
               </div>
-              <p style="padding-left: 20px;">I have lots of experience in business operations and business devlopment space with a concetration in creating processes for new technology and using third party systems to get to market during intial devlopment.</p>
-              <p style="padding-left: 20px;">I also have expereince in the web devlopment space with HTML, CSS, JavaScript, JQuery, Node.JS and Bootstrap. I will be completing the GA Tech Coding Bootcamp in November. </p>
+              <p style="padding-left: 20px;">I have lots of experience in business operations and business development space with a concentration in creating processes for new technology and using third party systems to get to market during initial development.</p>
+              <p style="padding-left: 20px;">I also have experience in the web development space with HTML, CSS, JavaScript, JQuery, Bootstrap, Node.JS, Express, MySQL, MongoDB, and React. I will be completing the GA Tech Coding Bootcamp in November 2019. </p>            
 
-              <h4 style="padding-left: 20px;"> Connect with me on LinkedIn: </h4>
-              <a href="https://www.linkedin.com/in/ryan-sims265/"><button type="button" class="btn btn-primary btn-lg btn-block" href="http://google.com">LinkedIn</button></a>
-              <br>
-              <br>
-              <br>
-              <h4 style="padding-left: 20px;"> Check out my Github Profile: </h4>
-              <a href="https://github.com/ryansims265" target="_parent"><button type="button" class="btn btn-dark btn-lg btn-block">GitHub</button></a>
-              <br>
-              <br>
-              <br>
-              <h4 style="padding-left: 20px;"> Check out my Resume: </h4>
-              <a href="https://docs.google.com/document/d/1piKwM3ArzlLJrUHr92c445G2VzqyrgZZxwBh6ifklKI/edit?usp=sharing"><button type="button" class="btn btn-success btn-lg btn-block">Resume</button></a>
-              <br>
 
+             
+                <a href="https;//github.com/ryansims265"><button type="button" class="btn btn-dark">GitHub</button></a>
+                <br>
+                <a href="https://www.linkedin.com/in/ryan-sims265/"><button type="button" class="btn btn-primary">LinkedIn</button></a>
+                <br>
+                <a href="https://docs.google.com/document/d/1piKwM3ArzlLJrUHr92c445G2VzqyrgZZxwBh6ifklKI/edit?usp=sharing"><button type="button" class="btn btn-warning">Resume</button></a>
+           <br>
 
             </section>
      <footer class="fixed-bottom" style="background-color: orange;">
