--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio | Your Name</title>
+  <title>Portfolio </title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -30,7 +30,7 @@
 <div class="container" id="main-container" style="background-color: white;">
   <section class="main-section">
     <br>
-      <h1>Feel free to check out my latest projects:</h1>
+      <h1>Check out my latest projects:</h1>
 
       <br>
       <br>
@@ -48,9 +48,15 @@
             <form action="https://ryansims265.github.io/TriviaGame/">
               <input type="submit" value="Click here to play!" />
           </form>
+          <br>
+          <form action="https://github.com/ryansims265/TriviaGame">
+            <input type="submit" value="See Code" />
+            <br>
+        </form>
+        <br>
           </div>
         </div>
-
+<br>
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
@@ -58,9 +64,15 @@
           </div>
           <div class="col-6">
             <h3>Good Burger Application</h3>
-            <form action="https://github.com/ryansims265/burger">
+            <form action="https://aqueous-anchorage-43398.herokuapp.com/">
               <input type="submit" value="Click here to check it out!" />
           </form>
+          <br>
+          <form action="https://github.com/ryansims265/burger">
+            <input type="submit" value="See Code" />
+            <br>
+        </form>
+        <br>
           </div>
 <br>
         </div>
@@ -79,6 +91,12 @@
               <input type="submit" value="Click here to check it out!" />
               <br>
           </form>
+          <br>
+          <form action="https://github.com/ryansims265/trainScheduler">
+            <input type="submit" value="See Code" />
+            <br>
+        </form>
+        <br>
           </div>
         </div>
 
@@ -93,6 +111,12 @@
           <form action="https://ryansims265.github.io/Crystal-Game/">
             <input type="submit" value="Click here to play!" />
         </form>
+        <br>
+        <form action="https://github.com/ryansims265/Crystal-Game">
+          <input type="submit" value="See Code" />
+          <br>
+      </form>
+      <br>
         </div>
       </div>
 <br>
@@ -109,6 +133,12 @@
           <form action="https://ryansims265.github.io/project1/">
             <input type="submit" value="Click here to check it out!" />
         </form>
+        <br>
+        <form action="https://github.com/ryansims265/project1">
+          <input type="submit" value="See Code" />
+          <br>
+      </form>
+      <br>
         
         <br>
 
@@ -118,13 +148,19 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/bamazon.jpg" alt="Liri Bot" style="width: 300px; height: 150px" "></div>
+              <img src="assets/images/studybuddy.jpg" alt="Study Buddy" style="width: 300px; height: 150px" "></div>
           </div>
           <div class="col-6">
-            <h3>Bamazon Store</h3>
-            <form action="https://github.com/ryansims265/bamazon_store">
+            <h3>Study Buddy</h3>
+            <form action="https://safe-shore-42414.herokuapp.com/">
               <input type="submit" value="Click here to check it out!" />
           </form>
+          <br>
+          <form action="https://github.com/ryansims265/Project-2">
+            <input type="submit" value="See Code" />
+            <br>
+        </form>
+        <br>
           </div>
       </div>
 
