--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Contact | Your Name</title>
+  <title>Contact Me</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -33,7 +33,8 @@
 
   <div id="main-container" class="container">
     <section class="main-section">
-      <h1>Contact</h1>
+      <h1>Contact Me</h1>
+      <h4>You can also text/call me at (678) 490-5055 or email me at ryansims265@gmail.com</h4>
 
       <form>
         <div class="form-group">
@@ -60,6 +61,9 @@
     </section>
 
   </div>
+
+
+  
 
   <footer class="fixed-bottom" style="background-color: orange;">
         <nav>
