Addded news scraper tool

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,15 +41,15 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/jones.jpg" alt="Indiana" style="width: 300px; height: 150px" ></div>
+              <img src="assets/images/news.jpg" alt="Indiana" style="width: 300px; height: 150px" ></div>
           </div>
           <div class="col-6">
-            <h3>Indiana Jones Trivia Game</h3>
-            <form action="https://ryansims265.github.io/TriviaGame/">
-              <input type="submit" value="Click here to play!" />
+            <h3>News Scraper Tool</h3>
+            <form action="https://stormy-sands-98738.herokuapp.com/">
+              <input type="submit" value="Click here to check it out!" />
           </form>
           <br>
-          <form action="https://github.com/ryansims265/TriviaGame">
+          <form action="https://github.com/ryansims265/newsScraperTool">
             <input type="submit" value="See Code" />
             <br>
         </form>
