--- a/portfolio.html
+++ b/portfolio.html
@@ -41,15 +41,15 @@
         <div class="col-sm-6">
           <div class="row">
             <div class="col-6">
-              <img src="assets/images/news.jpg" alt="Indiana" style="width: 300px; height: 150px" ></div>
+              <img src="assets/images/sslogo.jpg" alt="Super Street" style="width: 300px; height: 150px" ></div>
           </div>
           <div class="col-6">
-            <h3>News Scraper Tool</h3>
-            <form action="https://stormy-sands-98738.herokuapp.com/">
+            <h3>JDM Clicky React Game</h3>
+            <form action="http://jdm-game.herokuapp.com/">
               <input type="submit" value="Click here to check it out!" />
           </form>
           <br>
-          <form action="https://github.com/ryansims265/newsScraperTool">
+          <form action="https://github.com/ryansims265/react_Game">
             <input type="submit" value="See Code" />
             <br>
         </form>
